// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button click event 1`] = `
<Button
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    iconStyle=""
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Button"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button ripple"
        disabled={false}
        id="Button-0"
        onClick={[Function]}
        sizing="normal"
        style={Object {}}
        visible={true}
      >
        <StyledComponent
          className="ui-button ripple"
          disabled={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "lastClassName": "bsgMqy",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          id="Button-0"
          onClick={[Function]}
          sizing="normal"
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button ripple sc-gzVnrw bsgMqy"
            disabled={false}
            id="Button-0"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom={null}
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage={null}
              focus={false}
              height={null}
              iconName="bomb"
              id={null}
              imageFile=""
              left={null}
              location="none"
              minHeight={null}
              minWidth={null}
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              notooltip={false}
              obj="Icon"
              padding={null}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip={null}
              top={null}
              visible={true}
              width={null}
              xcss={null}
            >
              <Wrapper
                bottom={null}
                className=""
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage={null}
                focus={false}
                height={null}
                iconName="bomb"
                id={null}
                imageFile=""
                left={null}
                location="none"
                minHeight={null}
                minWidth={null}
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                notooltip={false}
                obj="Icon"
                onError={[Function]}
                padding={null}
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip={null}
                top={null}
                visible={true}
                width={null}
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "fontFamily": "OpenSans, Georgia, serif",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom={null}
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    notooltip={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <StyledComponent
                      bottom={null}
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "hBOHvv",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      notooltip={false}
                      obj="Icon"
                      padding={null}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height={null}
                        id={null}
                        selected={false}
                        style={Object {}}
                        width={null}
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Button>
`;

exports[`Test creation of a Button control 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-button ripple test-class"
    disabled={false}
    id="Button-0"
    onClick={[Function]}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Icon
      bottom={null}
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      iconName="bomb"
      id={null}
      imageFile=""
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={false}
      notheme={false}
      notooltip={false}
      obj="Icon"
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    />
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Button control with custom icon, colors, and border 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="superpowers"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "black",
      "borderColor": "green",
      "borderWidth": "2px",
      "color": "red",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-button ripple"
    disabled={false}
    id="Button-0"
    onClick={[Function]}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "green",
        "borderWidth": "2px",
        "color": "red",
      }
    }
    visible={true}
  >
    <Icon
      bottom={null}
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      iconName="superpowers"
      id={null}
      imageFile=""
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={false}
      notheme={false}
      notooltip={false}
      obj="Icon"
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    />
  </styled.div>
</Wrapper>
`;

exports[`Test disabling of a Button 1`] = `
<Button
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    iconStyle=""
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Button"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button nohover"
        disabled={true}
        id="Button-0"
        onClick={[Function]}
        sizing="normal"
        style={Object {}}
        visible={true}
      >
        <StyledComponent
          className="ui-button nohover"
          disabled={true}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "lastClassName": "PSLHj",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          id="Button-0"
          onClick={[Function]}
          sizing="normal"
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button nohover sc-gzVnrw PSLHj"
            disabled={true}
            id="Button-0"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom={null}
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage={null}
              focus={false}
              height={null}
              iconName="bomb"
              id={null}
              imageFile=""
              left={null}
              location="none"
              minHeight={null}
              minWidth={null}
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              notooltip={false}
              obj="Icon"
              padding={null}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip={null}
              top={null}
              visible={true}
              width={null}
              xcss={null}
            >
              <Wrapper
                bottom={null}
                className=""
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage={null}
                focus={false}
                height={null}
                iconName="bomb"
                id={null}
                imageFile=""
                left={null}
                location="none"
                minHeight={null}
                minWidth={null}
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                notooltip={false}
                obj="Icon"
                onError={[Function]}
                padding={null}
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip={null}
                top={null}
                visible={true}
                width={null}
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "fontFamily": "OpenSans, Georgia, serif",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom={null}
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    notooltip={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <StyledComponent
                      bottom={null}
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "hBOHvv",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      notooltip={false}
                      obj="Icon"
                      padding={null}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height={null}
                        id={null}
                        selected={false}
                        style={Object {}}
                        width={null}
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Button>
`;

exports[`Test making a Button invisible 1`] = `
<Button
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[MockFunction]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    iconStyle=""
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Button"
    onClick={[MockFunction]}
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={false}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button ripple"
        disabled={false}
        id="Button-0"
        onClick={[Function]}
        sizing="normal"
        style={Object {}}
        visible={false}
      >
        <StyledComponent
          className="ui-button ripple"
          disabled={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gzVnrw",
                "isStatic": false,
                "lastClassName": "jvERqM",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	flex: 1;

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gzVnrw",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          id="Button-0"
          onClick={[Function]}
          sizing="normal"
          style={Object {}}
          visible={false}
        >
          <div
            className="ui-button ripple sc-gzVnrw jvERqM"
            disabled={false}
            id="Button-0"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom={null}
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage={null}
              focus={false}
              height={null}
              iconName="bomb"
              id={null}
              imageFile=""
              left={null}
              location="none"
              minHeight={null}
              minWidth={null}
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              notooltip={false}
              obj="Icon"
              padding={null}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip={null}
              top={null}
              visible={true}
              width={null}
              xcss={null}
            >
              <Wrapper
                bottom={null}
                className=""
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage={null}
                focus={false}
                height={null}
                iconName="bomb"
                id={null}
                imageFile=""
                left={null}
                location="none"
                minHeight={null}
                minWidth={null}
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                notooltip={false}
                obj="Icon"
                onError={[Function]}
                padding={null}
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip={null}
                top={null}
                visible={true}
                width={null}
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "fontFamily": "OpenSans, Georgia, serif",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom={null}
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage={null}
                    focus={false}
                    height={null}
                    iconName="bomb"
                    id={null}
                    imageFile=""
                    left={null}
                    location="none"
                    minHeight={null}
                    minWidth={null}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    notooltip={false}
                    obj="Icon"
                    padding={null}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip={null}
                    top={null}
                    visible={true}
                    width={null}
                    xcss={null}
                  >
                    <StyledComponent
                      bottom={null}
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage={null}
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "hBOHvv",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height={null}
                      iconName="bomb"
                      id={null}
                      imageFile=""
                      left={null}
                      location="none"
                      minHeight={null}
                      minWidth={null}
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      notooltip={false}
                      obj="Icon"
                      padding={null}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip={null}
                      top={null}
                      visible={true}
                      width={null}
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height={null}
                        id={null}
                        selected={false}
                        style={Object {}}
                        width={null}
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Button>
`;

exports[`Test retrieval of Button props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "iconStyle": "",
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Button",
  "onClick": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
